# Style-Bert-VITS2

./: .gitignore  Start_Monitor.bat  TODO.md  app.py  colab.ipynb  default_config.yml  library.ipynb  monitor_training.py  pyproject.toml  server_editor.py  server_fastapi.py  style_gen.py  train_ms_jp_extra.py
.claude/: settings.local.json
configs/: config.json
dict_data/: .gitignore
docs/: CLI.md  DEPRECATION_V3.md  FORK_COMPARISON.md  paperspace.md
installers/: Install-Style-Bert-VITS2-CPU.bat  Install-Style-Bert-VITS2.bat  Update-Style-Bert-VITS2-CPU.bat  Update-Style-Bert-VITS2.bat
scripts/: bert_gen.py  config.py  convert_model_v3.py  convert_onnx.py  data_utils.py  initialize.py  preprocess_all.py  preprocess_text.py  resample.py  server_fastapi.py  style_gen.py  train.py  train_jp_extra.py  transcribe.py
scripts/gradio_tabs/: dataset.py  inference.py  train.py
style_bert_vits2/: constants.py  tts_model.py
style_bert_vits2/models/: attentions.py  hyper_parameters.py  infer.py  infer_onnx.py  models.py  models_jp_extra.py  modules.py  transforms.py
style_bert_vits2/nlp/: __init__.py  bert_models.py  symbols.py
style_bert_vits2/nlp/chinese/: bert_feature.py
style_bert_vits2/nlp/english/: bert_feature.py  cmudict.py  short_form_dict_cache.pickle
style_bert_vits2/nlp/japanese/: bert_feature.py  g2p.py  g2p_utils.py
style_bert_vits2/nlp/japanese/pyopenjtalk_worker/: __init__.py
style_bert_vits2/nlp/japanese/user_dict/: __init__.py
tests/: benchmark_dtype.py  streaming_benchmark.py  test_library_usage.py  test_normalizer.py
